--- a/Polish.html
+++ b/Polish.html
@@ -1,18 +1,26 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
+  <head>
     <meta charset="utf-8" />
-        <title>Fat Boss Gambling</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-        <link rel="icon" type="image/x-icon" href="./images/icons/favicon.png" />
-        <link rel= "stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <meta name="description"
-            content="Welcome to Fat Boss Casino! Our online casino has all your favourite games, including slots, table games, and video poker. Fully licensed and regulated, join now and start winning big!" />
-        <script src="main.js"></script>
-</head>
+    <title>Fat Boss Gambling</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <link rel="icon" type="image/x-icon" href="./images/icons/favicon.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <meta
+      name="description"
+      content="Welcome to Fat Boss Casino! Our online casino has all your favourite games, including slots, table games, and video poker. Fully licensed and regulated, join now and start winning big!"
+    />
+    <script src="main.js"></script>
+  </head>
 
-<body class="main-wrapper">
+  <body class="main-wrapper">
     <header class="hamburger">
       <div class="hamburger-container">
         <a href="https://fatbossgambling.ph" class="logo"></a>
@@ -40,9 +48,7 @@
           <div class="navitem">
             <div class="select-container">
               <div class="selected">
-                <div
-                  class="flag"
-                >
+                <div class="flag">
                   <a href="./index.html">
                     <img
                       src="./images/icons/united-states-of-america-flag-round-icon-32.png"
@@ -53,9 +59,7 @@
                 <i class="fa fa-caret-down" aria-hidden="true"></i>
               </div>
               <ul class="select-list">
-                <li
-                  class="flag"
-                >
+                <li class="flag">
                   <a href="./index.html">
                     <img
                       src="./images/icons/united-states-of-america-flag-round-icon-32.png"
@@ -63,9 +67,7 @@
                   </a>
                   EN
                 </li>
-                <li
-                  class="flag pl"
-                >
+                <li class="flag pl">
                   <a href="./Polish.html">
                     <img src="./images/icons/poland-flag-round-icon-32.png" />
                   </a>
@@ -96,13 +98,7 @@
         <div class="navitem">
           <div class="select-container">
             <div class="selected">
-              <div
-                lang-selection="EN"
-                tooltip="EN"
-                flow="down"
-                onclick="onSelect(this)"
-                class="flag"
-              >
+              <div lang-selection="EN" class="flag">
                 <a href="./index.html">
                   <img
                     src="./images/icons/united-states-of-america-flag-round-icon-32.png"
@@ -113,31 +109,20 @@
               <i class="fa fa-caret-down" aria-hidden="true"></i>
             </div>
             <ul class="select-list">
-              <li
-              lang-selection="EN"
-              tooltip="EN"
-              flow="down"
-              onclick="onSelect(this)"
-              class="flag"
-              >
-              <a href="./index.html">
-                <img
-                src="./images/icons/united-states-of-america-flag-round-icon-32.png"
-                />
-              </a>
-              EN
-            </li>
-            <li
-              lang-selection="PL"
-              tooltip="PL"
-              flow="down"
-              class="flag pl"
-            >
-              <a href="./Polish.html">
-                <img src="./images/icons/poland-flag-round-icon-32.png" />
-              </a>
-              PL
-            </li>
+              <li class="flag">
+                <a href="./index.html">
+                  <img
+                    src="./images/icons/united-states-of-america-flag-round-icon-32.png"
+                  />
+                </a>
+                EN
+              </li>
+              <li class="flag pl">
+                <a href="./Polish.html">
+                  <img src="./images/icons/poland-flag-round-icon-32.png" />
+                </a>
+                PL
+              </li>
             </ul>
           </div>
         </div>
@@ -150,7 +135,9 @@
           <h1 class="hero-header">
             Wygraj dużo w <span class="fat-boss">Fat Boss</span>
           </h1>
-          <h2 class="hero-subheader">€350 bonus powitalny i 100 darmowych spinów.</h2>
+          <h2 class="hero-subheader">
+            €350 bonus powitalny i 100 darmowych spinów.
+          </h2>
           <a href="#" class="hero-button">Odbierz swój bonus.</a>
         </div>
       </div>
@@ -163,15 +150,26 @@
             Dołącz do kasyna online<span class="fat-boss"> Fat Boss</span>
           </h1>
           <h2 class="promo-subHead">
-            & Odbierz swój bonus powitalny w wysokości 350 EUR oraz 100 darmowych spinów.
+            & Odbierz swój bonus powitalny w wysokości 350 EUR oraz 100
+            darmowych spinów.
           </h2>
           <p class="promo-para">
-            Gry kasyno online w Fat Boss oferują emocje związane z wygraną w wielkich kwotach! Nasza nowoczesna platforma oferuje szeroki wybór ekscytujących gier kasynowych online, wszystkie obsługiwane przez oprogramowanie najwyższej jakości. Jako specjalna oferta dla nowych graczy oferujemy bonus powitalny w wysokości 350 EUR i 100 darmowych spinów do wykorzystania w ulubionych grach kasynowych online.
+            Gry kasyno online w Fat Boss oferują emocje związane z wygraną w
+            wielkich kwotach! Nasza nowoczesna platforma oferuje szeroki wybór
+            ekscytujących gier kasynowych online, wszystkie obsługiwane przez
+            oprogramowanie najwyższej jakości. Jako specjalna oferta dla nowych
+            graczy oferujemy bonus powitalny w wysokości 350 EUR i 100 darmowych
+            spinów do wykorzystania w ulubionych grach kasynowych online.
             <br />
             <br />
-            To prawda - zarejestruj się teraz i otrzymaj 350 EUR i 100 darmowych spinów do wykorzystania w ulubionych grach. Nie przegap więc okazji do gry i wygrania dużych kwot w Fat Boss - dołącz i odbierz swój bonus już dziś!
+            To prawda - zarejestruj się teraz i otrzymaj 350 EUR i 100 darmowych
+            spinów do wykorzystania w ulubionych grach. Nie przegap więc okazji
+            do gry i wygrania dużych kwot w Fat Boss - dołącz i odbierz swój
+            bonus już dziś!
           </p>
-          <a href="#" class="promo-button">Odbierz darmowe spiny i traf jackpota!</a>
+          <a href="#" class="promo-button"
+            >Odbierz darmowe spiny i traf jackpota!</a
+          >
         </div>
         <div class="promo-image">
           <img src="images/body/fatboss.png" alt="Fat Boss Online Casino" />
@@ -181,11 +179,17 @@
       <!-- Games section -->
       <section class="games-section">
         <h1 class="games-head">
-            Znajdź swoją grę w kasynie internetowym <span class="fat-boss">Fat Boss</span>.
+          Znajdź swoją grę w kasynie internetowym
+          <span class="fat-boss">Fat Boss</span>.
         </h1>
         <h2 class="games-subHead">Setki ekscytujących gier do wyboru.</h2>
         <p class="games-text">
-            Szukasz najlepszych gier w branży? Nie szukaj dalej niż Fatt Boss! Mamy wszystkie twoje ulubione, od klasycznych automatów i gier stołowych po najnowsze premiery. Z najlepiej ocenianą grafiką i płynną rozgrywką poczujesz się jak w samym środku akcji. Plus, z nowymi grami dodawanymi cały czas, zawsze będziesz miał opcje. Spróbuj swojego szczęścia dziś i zobacz, czy masz to, co trzeba, aby być zwycięzcą!
+          Szukasz najlepszych gier w branży? Nie szukaj dalej niż Fatt Boss!
+          Mamy wszystkie twoje ulubione, od klasycznych automatów i gier
+          stołowych po najnowsze premiery. Z najlepiej ocenianą grafiką i płynną
+          rozgrywką poczujesz się jak w samym środku akcji. Plus, z nowymi grami
+          dodawanymi cały czas, zawsze będziesz miał opcje. Spróbuj swojego
+          szczęścia dziś i zobacz, czy masz to, co trzeba, aby być zwycięzcą!
         </p>
       </section>
 
@@ -251,7 +255,9 @@
             Złożę ci ofertę, której nie będziesz mógł odrzucić.
             <span class="fat-boss">”</span>
           </h1>
-          <h2 class="offer-subHead">350 EUR bonus powitalny i 100 darmowych spinów.</h2>
+          <h2 class="offer-subHead">
+            350 EUR bonus powitalny i 100 darmowych spinów.
+          </h2>
           <button class="offer-button">
             PRZYJMIJ SWÓJ BONUS I ZACZNIJ WYGRYWAĆ DUŻO!
           </button>
@@ -268,13 +274,26 @@
         </div>
         <div class="devices-text">
           <h1 class="devices-head">
-            Zabierz <span class="fat-boss">Fat Boss</span> ze sobą wszędzie, gdzie tylko chcesz
+            Zabierz <span class="fat-boss">Fat Boss</span> ze sobą wszędzie,
+            gdzie tylko chcesz
           </h1>
           <h2 class="devices-subHead">
-            Ciesz się płynnym i przyjaznym dla urządzeń mobilnych gamingiem na dowolnym urządzeniu.
+            Ciesz się płynnym i przyjaznym dla urządzeń mobilnych gamingiem na
+            dowolnym urządzeniu.
           </h2>
           <p class="devices-para">
-            W Fatt Boss rozumiemy, że gracze chcą mieć elastyczność, by grać w dowolnym miejscu. W rezultacie oferujemy całkowicie responsywną witrynę mobilną, dzięki czemu możesz grać w swoje ulubione gry z dowolnego urządzenia, w dowolnym miejscu. Dzięki łatwej nawigacji i intuicyjnym sterowaniom będziesz mógł szybko rozpocząć grę. W rezultacie nasza witryna mobilna jest tak samo bezpieczna jak wersja desktopowa, dzięki czemu możesz grać z pewnością. Niezależnie od tego, czy wolisz grać na telefonie, tablecie czy laptopie, Fatt Boss cię objął. Dlatego spróbuj dziś i zobacz, dlaczego Fatt Boss jest najlepszym wyborem dla gier mobilnych! W ten sposób możesz cieszyć się wygodą gry w dowolnym miejscu z poczuciem bezpieczeństwa i niezawodności gry.
+            W Fatt Boss rozumiemy, że gracze chcą mieć elastyczność, by grać w
+            dowolnym miejscu. W rezultacie oferujemy całkowicie responsywną
+            witrynę mobilną, dzięki czemu możesz grać w swoje ulubione gry z
+            dowolnego urządzenia, w dowolnym miejscu. Dzięki łatwej nawigacji i
+            intuicyjnym sterowaniom będziesz mógł szybko rozpocząć grę. W
+            rezultacie nasza witryna mobilna jest tak samo bezpieczna jak wersja
+            desktopowa, dzięki czemu możesz grać z pewnością. Niezależnie od
+            tego, czy wolisz grać na telefonie, tablecie czy laptopie, Fatt Boss
+            cię objął. Dlatego spróbuj dziś i zobacz, dlaczego Fatt Boss jest
+            najlepszym wyborem dla gier mobilnych! W ten sposób możesz cieszyć
+            się wygodą gry w dowolnym miejscu z poczuciem bezpieczeństwa i
+            niezawodności gry.
           </p>
         </div>
       </section>
@@ -283,11 +302,12 @@
       <section class="review-section">
         <div class="review-text">
           <h1 class="review-head">
-            Gracze uwielbiają kasyno online 
+            Gracze uwielbiają kasyno online
             <span class="fat-boss">Fat Boss</span>
           </h1>
           <h2 class="review-subHead">
-            Najlepsze miejsce dla najlepiej ocenianych gier z prawdziwymi pieniędzmi
+            Najlepsze miejsce dla najlepiej ocenianych gier z prawdziwymi
+            pieniędzmi
           </h2>
         </div>
         <div class="reviews">
@@ -313,7 +333,10 @@
                 />
               </div>
               <p class="review-para">
-                "Jestem graczem Fatt Boss od ponad roku i miałem tylko pozytywne doświadczenia. Gry są świetne, a obsługa klienta zawsze jest dostępna, aby pomóc w razie jakichkolwiek problemów. Gorąco polecam!"
+                "Jestem graczem Fatt Boss od ponad roku i miałem tylko pozytywne
+                doświadczenia. Gry są świetne, a obsługa klienta zawsze jest
+                dostępna, aby pomóc w razie jakichkolwiek problemów. Gorąco
+                polecam!"
               </p>
             </div>
             <div class="review-wrap">
@@ -336,7 +359,10 @@
                 />
               </div>
               <p class="review-para">
-                "Jestem graczem Fatt Boss od ponad roku i miałem tylko pozytywne doświadczenia. Gry są świetne, a obsługa klienta zawsze jest dostępna, aby pomóc w razie jakichkolwiek problemów. Gorąco polecam!"
+                "Jestem graczem Fatt Boss od ponad roku i miałem tylko pozytywne
+                doświadczenia. Gry są świetne, a obsługa klienta zawsze jest
+                dostępna, aby pomóc w razie jakichkolwiek problemów. Gorąco
+                polecam!"
               </p>
             </div>
           </div>
@@ -361,7 +387,9 @@
                 />
               </div>
               <p class="review-para">
-                "Jestem graczem Fatt Boss od kilku miesięcy i zawsze jestem zachwycony jakością ich gier i obsługi klienta. Gorąco polecam Fatt Bossa za przyjemne i niezawodne doświadczenie z grami."
+                "Jestem graczem Fatt Boss od kilku miesięcy i zawsze jestem
+                zachwycony jakością ich gier i obsługi klienta. Gorąco polecam
+                Fatt Bossa za przyjemne i niezawodne doświadczenie z grami."
               </p>
             </div>
             <div class="review-wrap">
@@ -384,7 +412,9 @@
                 />
               </div>
               <p class="review-para">
-                "Jako doświadczony gracz wiem, kiedy widzę dobrą stronę. Fatt Boss przekroczył wszystkie moje oczekiwania - gry są zabawne, a wypłaty są szybkie. A+ we wszystkich aspektach!
+                "Jako doświadczony gracz wiem, kiedy widzę dobrą stronę. Fatt
+                Boss przekroczył wszystkie moje oczekiwania - gry są zabawne, a
+                wypłaty są szybkie. A+ we wszystkich aspektach!
               </p>
             </div>
           </div>
@@ -399,10 +429,19 @@
             <span class="fat-boss">Fat Boss</span>
           </h1>
           <h2 class="payment-subHead">
-            Akceptowane są Visa, Mastercard, Blik, Bitcoin, Ethereum i więcej w Fat Boss
+            Akceptowane są Visa, Mastercard, Blik, Bitcoin, Ethereum i więcej w
+            Fat Boss
           </h2>
           <p class="payment-para">
-            W Fatt Boss oferujemy szeroką gamę metod płatności, aby dostosować się do Twoich potrzeb dotyczących gry w kasynie online. Ponadto łatwo możesz dokonywać wpłat i wypłat, aby jak najszybciej wrócić do gry. Czy wolisz tradycyjne opcje, takie jak Visa i Mastercard, czy bardziej nowoczesne metody, takie jak Blik, Bitcoin i Ethereum, mamy wszystko, czego potrzebujesz do gry w kasynie online. Co więcej, staramy się umożliwić obsługę Twoich funduszy jak najbardziej płynną i bezpieczną, podczas gdy korzystasz z naszego szerokiego wyboru gier kasynowych online.
+            W Fatt Boss oferujemy szeroką gamę metod płatności, aby dostosować
+            się do Twoich potrzeb dotyczących gry w kasynie online. Ponadto
+            łatwo możesz dokonywać wpłat i wypłat, aby jak najszybciej wrócić do
+            gry. Czy wolisz tradycyjne opcje, takie jak Visa i Mastercard, czy
+            bardziej nowoczesne metody, takie jak Blik, Bitcoin i Ethereum, mamy
+            wszystko, czego potrzebujesz do gry w kasynie online. Co więcej,
+            staramy się umożliwić obsługę Twoich funduszy jak najbardziej płynną
+            i bezpieczną, podczas gdy korzystasz z naszego szerokiego wyboru
+            gier kasynowych online.
           </p>
         </div>
       </section>
