--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     />
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <link rel="icon" type="image/x-icon" href="./images/icons/favicon.png" />
-    <link rel= "stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <!-- <meta
       name="description"
       content="Welcome to Fat Boss Casino! Our online casino has all your favourite games, including slots, table games, and video poker. Fully licensed and regulated, join now and start winning big!"
@@ -49,9 +52,7 @@
           <div class="navitem">
             <div class="select-container">
               <div class="selected">
-                <div
-                  class="flag"
-                >
+                <div class="flag">
                   <a href="./index.html">
                     <img
                       src="./images/icons/united-states-of-america-flag-round-icon-32.png"
@@ -62,9 +63,7 @@
                 <i class="fa fa-caret-down" aria-hidden="true"></i>
               </div>
               <ul class="select-list">
-                <li
-                  class="flag"
-                >
+                <li class="flag">
                   <a href="./index.html">
                     <img
                       src="./images/icons/united-states-of-america-flag-round-icon-32.png"
@@ -72,8 +71,7 @@
                   </a>
                   EN
                 </li>
-                <li
-                >
+                <li>
                   <a href="./Polish.html">
                     <img src="./images/icons/poland-flag-round-icon-32.png" />
                   </a>
@@ -104,13 +102,7 @@
         <div class="navitem">
           <div class="select-container">
             <div class="selected">
-              <div
-                lang-selection="EN"
-                tooltip="EN"
-                flow="down"
-                onclick="onSelect(this)"
-                class="flag"
-              >
+              <div class="flag">
                 <a href="./index.html">
                   <img
                     src="./images/icons/united-states-of-america-flag-round-icon-32.png"
@@ -121,13 +113,7 @@
               <i class="fa fa-caret-down" aria-hidden="true"></i>
             </div>
             <ul class="select-list">
-              <li
-                lang-selection="EN"
-                tooltip="EN"
-                flow="down"
-                onclick="onSelect(this)"
-                class="flag"
-              >
+              <li class="flag">
                 <a href="./index.html">
                   <img
                     src="./images/icons/united-states-of-america-flag-round-icon-32.png"
@@ -135,12 +121,7 @@
                 </a>
                 EN
               </li>
-              <li
-                lang-selection="PL"
-                tooltip="PL"
-                flow="down"
-                class="flag pl"
-              >
+              <li class="flag pl">
                 <a href="./Polish.html">
                   <img src="./images/icons/poland-flag-round-icon-32.png" />
                 </a>
