--- a/Polish.html
+++ b/Polish.html
@@ -21,6 +21,7 @@
   </head>
 
   <body class="main-wrapper">
+    <!-- Mobile Menu -->
     <header class="hamburger">
       <div class="hamburger-container">
         <a href="https://fatbossgambling.ph" class="logo"></a>
@@ -48,37 +49,38 @@
           <div class="navitem">
             <div class="select-container">
               <div class="selected">
-                <div class="flag">
-                  <a href="./index.html">
+                  <a href="./index.html"  class="flag">
                     <img
                       src="./images/icons/united-states-of-america-flag-round-icon-32.png"
                     />
+                    EN
                   </a>
-                  EN
-                </div>
                 <i class="fa fa-caret-down" aria-hidden="true"></i>
               </div>
               <ul class="select-list">
-                <li class="flag">
-                  <a href="./index.html">
+                <li class="wd-100">
+                  <a href="./index.html" class="flag">
                     <img
                       src="./images/icons/united-states-of-america-flag-round-icon-32.png"
                     />
+                    EN
                   </a>
-                  EN
                 </li>
-                <li class="flag pl">
-                  <a href="./Polish.html">
+                <li class="wd-100">
+                  <a href="./Polish.html"  class="flag pl">
                     <img src="./images/icons/poland-flag-round-icon-32.png" />
+                    PL
                   </a>
-                  PL
                 </li>
               </ul>
             </div>
           </div>
+          </div>
         </ul>
       </div>
     </header>
+
+    <!-- Desktop MENU -->
     <header class="navbar">
       <a href="https://fatbossgambling.ph" class="logo"></a>
       <ul class="navlist">
@@ -98,33 +100,32 @@
         <div class="navitem">
           <div class="select-container">
             <div class="selected">
-              <div lang-selection="EN" class="flag">
-                <a href="./index.html">
+                <a href="./index.html"  class="flag">
                   <img
                     src="./images/icons/united-states-of-america-flag-round-icon-32.png"
                   />
+                  EN
                 </a>
-                EN
-              </div>
               <i class="fa fa-caret-down" aria-hidden="true"></i>
             </div>
             <ul class="select-list">
-              <li class="flag">
-                <a href="./index.html">
+              <li class="wd-100">
+                <a href="./index.html" class="flag">
                   <img
                     src="./images/icons/united-states-of-america-flag-round-icon-32.png"
                   />
+                  EN
                 </a>
-                EN
               </li>
-              <li class="flag pl">
-                <a href="./Polish.html">
+              <li class="wd-100">
+                <a href="./Polish.html"  class="flag pl">
                   <img src="./images/icons/poland-flag-round-icon-32.png" />
+                  PL
                 </a>
-                PL
               </li>
             </ul>
           </div>
+        </div>
         </div>
       </ul>
     </header>
