--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   </head>
 
   <body class="main-wrapper">
+    <!-- Mobile Menu -->
     <header class="hamburger">
       <div class="hamburger-container">
         <a href="https://fatbossgambling.ph/" class="logo"></a>
@@ -52,30 +53,29 @@
           <div class="navitem">
             <div class="select-container">
               <div class="selected">
-                <div class="flag">
-                  <a href="./index.html">
+                  <a href="./index.html"  class="flag">
                     <img
-                      src="./images/icons/united-states-of-america-flag-round-icon-32.png"
+                      src="./images/icons/united-states-of-america-flag-round-icon-32.png" class="selected-img"
                     />
+                    <h3 class="selected-text"> EN</h3>
                   </a>
-                  EN
-                </div>
                 <i class="fa fa-caret-down" aria-hidden="true"></i>
               </div>
               <ul class="select-list">
-                <li class="flag">
-                  <a href="./index.html">
+                <li class="wd-100">
+                  <a href="./index.html" class="flag">
                     <img
                       src="./images/icons/united-states-of-america-flag-round-icon-32.png"
+                      class="img"
                     />
+                    <h3 class="text"> EN</h3>
                   </a>
-                  EN
                 </li>
-                <li>
-                  <a href="./Polish.html">
-                    <img src="./images/icons/poland-flag-round-icon-32.png" />
+                <li class="wd-100">
+                  <a href="./Polish.html"  class="flag pl">
+                    <img src="./images/icons/poland-flag-round-icon-32.png" class="img"/>
+                    <h3 class="text">PL</h3>
                   </a>
-                  PL
                 </li>
               </ul>
             </div>
@@ -83,6 +83,7 @@
         </ul>
       </div>
     </header>
+    <!-- Desktop Menu -->
     <header class="navbar">
       <a href="https://fatbossgambling.ph" class="logo"></a>
       <ul class="navlist">
@@ -100,32 +101,30 @@
           >
         </li>
         <div class="navitem">
-          <div class="select-container">
-            <div class="selected">
-              <div class="flag">
-                <a href="./index.html">
+          <div class="select-wrapper">
+            <div class="selected-item">
+                <a href="./index.html"  class="flag">
                   <img
                     src="./images/icons/united-states-of-america-flag-round-icon-32.png"
                   />
+                 <h3 class="lang"> EN</h3>
                 </a>
-                EN
-              </div>
               <i class="fa fa-caret-down" aria-hidden="true"></i>
             </div>
-            <ul class="select-list">
-              <li class="flag">
-                <a href="./index.html">
+            <ul class="select-dropdown">
+              <li class="wd-100">
+                <a href="./index.html"  class="flag">
                   <img
                     src="./images/icons/united-states-of-america-flag-round-icon-32.png"
                   />
+                 <h3 class="lang"> EN</h3>
                 </a>
-                EN
               </li>
-              <li class="flag pl">
-                <a href="./Polish.html">
+              <li class="wd-100">
+                <a href="./Polish.html"  class="flag pl">
                   <img src="./images/icons/poland-flag-round-icon-32.png" />
+                  <h4 class="lang">PL</h4>
                 </a>
-                PL
               </li>
             </ul>
           </div>
