--- a/index.html
+++ b/index.html
@@ -106,8 +106,10 @@
                 <a href="./index.html"  class="flag">
                   <img
                     src="./images/icons/united-states-of-america-flag-round-icon-32.png"
+                    class="img"
+                    id="imgSelected"
                   />
-                 <h3 class="lang"> EN</h3>
+                 <h3 class="lang" id="langText"> EN</h3>
                 </a>
               <i class="fa fa-caret-down" aria-hidden="true"></i>
             </div>
