--- a/Polish.html
+++ b/Polish.html
@@ -51,9 +51,9 @@
               <div class="selected">
                   <a href="./index.html"  class="flag">
                     <img
-                      src="./images/icons/united-states-of-america-flag-round-icon-32.png"
+                      src="./images/icons/united-states-of-america-flag-round-icon-32.png" class="selected-img"
                     />
-                    EN
+                    <h3 class="selected-text"> EN</h3>
                   </a>
                 <i class="fa fa-caret-down" aria-hidden="true"></i>
               </div>
@@ -62,19 +62,19 @@
                   <a href="./index.html" class="flag">
                     <img
                       src="./images/icons/united-states-of-america-flag-round-icon-32.png"
+                      class="img"
                     />
-                    EN
+                    <h3 class="text"> EN</h3>
                   </a>
                 </li>
                 <li class="wd-100">
                   <a href="./Polish.html"  class="flag pl">
-                    <img src="./images/icons/poland-flag-round-icon-32.png" />
-                    PL
+                    <img src="./images/icons/poland-flag-round-icon-32.png" class="img"/>
+                    <h3 class="text">PL</h3>
                   </a>
                 </li>
               </ul>
             </div>
-          </div>
           </div>
         </ul>
       </div>
@@ -98,34 +98,35 @@
           >
         </li>
         <div class="navitem">
-          <div class="select-container">
-            <div class="selected">
+          <div class="select-wrapper">
+            <div class="selected-item">
+                <a href="./index.html"  class="flag">
+                  <img
+                    src="./images/icons/united-states-of-america-flag-round-icon-32.png"
+                    class="img"
+                    id="imgSelected"
+                  />
+                 <h3 class="lang" id="langText"> EN</h3>
+                </a>
+              <i class="fa fa-caret-down" aria-hidden="true"></i>
+            </div>
+            <ul class="select-dropdown">
+              <li class="wd-100">
                 <a href="./index.html"  class="flag">
                   <img
                     src="./images/icons/united-states-of-america-flag-round-icon-32.png"
                   />
-                  EN
-                </a>
-              <i class="fa fa-caret-down" aria-hidden="true"></i>
-            </div>
-            <ul class="select-list">
-              <li class="wd-100">
-                <a href="./index.html" class="flag">
-                  <img
-                    src="./images/icons/united-states-of-america-flag-round-icon-32.png"
-                  />
-                  EN
+                 <h3 class="lang"> EN</h3>
                 </a>
               </li>
               <li class="wd-100">
                 <a href="./Polish.html"  class="flag pl">
                   <img src="./images/icons/poland-flag-round-icon-32.png" />
-                  PL
+                  <h4 class="lang">PL</h4>
                 </a>
               </li>
             </ul>
           </div>
-        </div>
         </div>
       </ul>
     </header>
