--- a/Polish.html
+++ b/Polish.html
@@ -49,28 +49,29 @@
           <div class="navitem">
             <div class="select-container">
               <div class="selected">
-                  <a href="./index.html"  class="flag">
-                    <img
-                      src="./images/icons/united-states-of-america-flag-round-icon-32.png" class="selected-img"
-                    />
-                    <h3 class="selected-text"> EN</h3>
-                  </a>
+                <a href="./index.html" class="flag">
+                  <img src="./images/icons/poland-flag-round-icon-32.png" />
+                  <h3 class="selected-text">PL</h3>
+                </a>
                 <i class="fa fa-caret-down" aria-hidden="true"></i>
               </div>
               <ul class="select-list">
+                <li class="wd-100">
+                  <a href="./Polish.html" class="flag pl">
+                    <img
+                      src="./images/icons/poland-flag-round-icon-32.png"
+                      class="img"
+                    />
+                    <h3 class="text">PL</h3>
+                  </a>
+                </li>
                 <li class="wd-100">
                   <a href="./index.html" class="flag">
                     <img
                       src="./images/icons/united-states-of-america-flag-round-icon-32.png"
                       class="img"
                     />
-                    <h3 class="text"> EN</h3>
-                  </a>
-                </li>
-                <li class="wd-100">
-                  <a href="./Polish.html"  class="flag pl">
-                    <img src="./images/icons/poland-flag-round-icon-32.png" class="img"/>
-                    <h3 class="text">PL</h3>
+                    <h3 class="text">EN</h3>
                   </a>
                 </li>
               </ul>
@@ -100,29 +101,29 @@
         <div class="navitem">
           <div class="select-wrapper">
             <div class="selected-item">
-                <a href="./index.html"  class="flag">
-                  <img
-                    src="./images/icons/united-states-of-america-flag-round-icon-32.png"
-                    class="img"
-                    id="imgSelected"
-                  />
-                 <h3 class="lang" id="langText"> EN</h3>
-                </a>
+              <a href="./index.html" class="flag">
+                <img
+                  src="./images/icons/poland-flag-round-icon-32.png"
+                  class="img"
+                  id="imgSelected"
+                />
+                <h3 class="lang" id="langText">PL</h3>
+              </a>
               <i class="fa fa-caret-down" aria-hidden="true"></i>
             </div>
             <ul class="select-dropdown">
               <li class="wd-100">
-                <a href="./index.html"  class="flag">
-                  <img
-                    src="./images/icons/united-states-of-america-flag-round-icon-32.png"
-                  />
-                 <h3 class="lang"> EN</h3>
+                <a href="./Polish.html" class="flag pl">
+                  <img src="./images/icons/poland-flag-round-icon-32.png" />
+                  <h3 class="lang">PL</h3>
                 </a>
               </li>
               <li class="wd-100">
-                <a href="./Polish.html"  class="flag pl">
-                  <img src="./images/icons/poland-flag-round-icon-32.png" />
-                  <h4 class="lang">PL</h4>
+                <a href="./index.html" class="flag">
+                  <img
+                    src="./images/icons/united-states-of-america-flag-round-icon-32.png"
+                  />
+                  <h3 class="lang">EN</h3>
                 </a>
               </li>
             </ul>
