--- a/Polish.html
+++ b/Polish.html
@@ -49,10 +49,10 @@
           <div class="navitem">
             <div class="select-container">
               <div class="selected">
-                <a href="./index.html" class="flag">
+                <div class="flag">
                   <img src="./images/icons/poland-flag-round-icon-32.png" />
                   <h3 class="selected-text">PL</h3>
-                </a>
+                </div>
                 <i class="fa fa-caret-down" aria-hidden="true"></i>
               </div>
               <ul class="select-list">
@@ -101,14 +101,14 @@
         <div class="navitem">
           <div class="select-wrapper">
             <div class="selected-item">
-              <a href="./index.html" class="flag">
+              <div class="flag">
                 <img
                   src="./images/icons/poland-flag-round-icon-32.png"
                   class="img"
                   id="imgSelected"
                 />
                 <h3 class="lang" id="langText">PL</h3>
-              </a>
+              </div>
               <i class="fa fa-caret-down" aria-hidden="true"></i>
             </div>
             <ul class="select-dropdown">
