--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
           <div class="navitem">
             <div class="select-container">
               <div class="selected">
-                  <a href="./index.html"  class="flag">
+                  <div class="flag">
                     <img
                       src="./images/icons/united-states-of-america-flag-round-icon-32.png" class="selected-img"
                     />
                     <h3 class="selected-text"> EN</h3>
-                  </a>
+                  </div>
                 <i class="fa fa-caret-down" aria-hidden="true"></i>
               </div>
               <ul class="select-list">
@@ -103,14 +103,14 @@
         <div class="navitem">
           <div class="select-wrapper">
             <div class="selected-item">
-                <a href="./index.html"  class="flag">
+                <div  class="flag">
                   <img
                     src="./images/icons/united-states-of-america-flag-round-icon-32.png"
                     class="img"
                     id="imgSelected"
                   />
                  <h3 class="lang" id="langText"> EN</h3>
-                </a>
+                </div>
               <i class="fa fa-caret-down" aria-hidden="true"></i>
             </div>
             <ul class="select-dropdown">
