--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
               <div class="selected">
                   <div class="flag">
                     <img
-                      src="./images/icons/united-states-of-america-flag-round-icon-32.png" class="selected-img"
+                      src="./images/icons/united-states-of-america-flag-round-icon-32.png" class="selected-img" alt="flag"
                     />
-                    <h3 class="selected-text"> EN</h3>
+                    <h5 class="selected-text"> EN</h5>
                   </div>
                 <i class="fa fa-caret-down" aria-hidden="true"></i>
               </div>
@@ -67,14 +67,15 @@
                     <img
                       src="./images/icons/united-states-of-america-flag-round-icon-32.png"
                       class="img"
+                      alt="flag"
                     />
-                    <h3 class="text"> EN</h3>
+                    <h5 class="text"> EN</h5>
                   </a>
                 </li>
                 <li class="wd-100">
                   <a href="./Polish.html"  class="flag pl">
-                    <img src="./images/icons/poland-flag-round-icon-32.png" class="img"/>
-                    <h3 class="text">PL</h3>
+                    <img src="./images/icons/poland-flag-round-icon-32.png" class="img" alt="flag"/>
+                    <h5 class="text">PL</h5>
                   </a>
                 </li>
               </ul>
@@ -108,8 +109,9 @@
                     src="./images/icons/united-states-of-america-flag-round-icon-32.png"
                     class="img"
                     id="imgSelected"
+                    alt="flag"
                   />
-                 <h3 class="lang" id="langText"> EN</h3>
+                 <h5 class="lang" id="langText"> EN</h5>
                 </div>
               <i class="fa fa-caret-down" aria-hidden="true"></i>
             </div>
@@ -117,15 +119,15 @@
               <li class="wd-100">
                 <a href="./index.html"  class="flag">
                   <img
-                    src="./images/icons/united-states-of-america-flag-round-icon-32.png"
+                    src="./images/icons/united-states-of-america-flag-round-icon-32.png" alt="flag"
                   />
-                 <h3 class="lang"> EN</h3>
+                 <h5 class="lang"> EN</h5>
                 </a>
               </li>
               <li class="wd-100">
                 <a href="./Polish.html"  class="flag pl">
-                  <img src="./images/icons/poland-flag-round-icon-32.png" />
-                  <h4 class="lang">PL</h4>
+                  <img src="./images/icons/poland-flag-round-icon-32.png" alt="flag" />
+                  <h5 class="lang">PL</h5>
                 </a>
               </li>
             </ul>
