--- a/Polish.html
+++ b/Polish.html
@@ -50,8 +50,8 @@
             <div class="select-container">
               <div class="selected">
                 <div class="flag">
-                  <img src="./images/icons/poland-flag-round-icon-32.png" />
-                  <h3 class="selected-text">PL</h3>
+                  <img src="./images/icons/poland-flag-round-icon-32.png" alt="flag" />
+                  <h5 class="selected-text">PL</h5>
                 </div>
                 <i class="fa fa-caret-down" aria-hidden="true"></i>
               </div>
@@ -61,8 +61,9 @@
                     <img
                       src="./images/icons/poland-flag-round-icon-32.png"
                       class="img"
+                      alt="flag"
                     />
-                    <h3 class="text">PL</h3>
+                    <h5 class="text">PL</h5>
                   </a>
                 </li>
                 <li class="wd-100">
@@ -70,8 +71,9 @@
                     <img
                       src="./images/icons/united-states-of-america-flag-round-icon-32.png"
                       class="img"
+                      alt="flag"
                     />
-                    <h3 class="text">EN</h3>
+                    <h5 class="text">EN</h5>
                   </a>
                 </li>
               </ul>
@@ -98,7 +100,7 @@
             >Welcome Bonus</a
           >
         </li>
-        <div class="navitem">
+        <li class="navitem">
           <div class="select-wrapper">
             <div class="selected-item">
               <div class="flag">
@@ -106,29 +108,30 @@
                   src="./images/icons/poland-flag-round-icon-32.png"
                   class="img"
                   id="imgSelected"
+                  alt="flag"
                 />
-                <h3 class="lang" id="langText">PL</h3>
+                <h5 class="lang" id="langText">PL</h5>
               </div>
               <i class="fa fa-caret-down" aria-hidden="true"></i>
             </div>
             <ul class="select-dropdown">
               <li class="wd-100">
                 <a href="./Polish.html" class="flag pl">
-                  <img src="./images/icons/poland-flag-round-icon-32.png" />
-                  <h3 class="lang">PL</h3>
+                  <img src="./images/icons/poland-flag-round-icon-32.png" alt="flag" />
+                  <h5 class="lang">PL</h5>
                 </a>
               </li>
               <li class="wd-100">
                 <a href="./index.html" class="flag">
                   <img
-                    src="./images/icons/united-states-of-america-flag-round-icon-32.png"
+                    src="./images/icons/united-states-of-america-flag-round-icon-32.png" alt="flag"
                   />
-                  <h3 class="lang">EN</h3>
+                  <h5 class="lang">EN</h5>
                 </a>
               </li>
             </ul>
           </div>
-        </div>
+        </li>
       </ul>
     </header>
 
