--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             >Welcome Bonus</a
           >
         </li>
-        <div class="navitem">
+        <li class="navitem">
           <div class="select-wrapper">
             <div class="selected-item">
                 <div  class="flag">
@@ -132,7 +132,7 @@
               </li>
             </ul>
           </div>
-        </div>
+        </li>
       </ul>
     </header>
 
