--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
   </head>
 
   <body class="main-wrapper">
+    <!-- Blik section -->
+    <section class="blik-section">
+      <h3 class="blik-head">Fat Boss now accepts blikk: deposit fast, get paid faster</h3>
+      <div class="blik-logo">
+        <img src="./images/logo/Fat-boss-online-casino-blik-logo.png" alt="Blik logo">
+      </div>
+    </section>
     <!-- Mobile Menu -->
     <header class="hamburger">
       <div class="hamburger-container">
@@ -184,7 +191,7 @@
         <h2 class="games-subHead">Hundreds of Exciting GAMES to Choose From</h2>
         <p class="games-text">
           Are you looking for the best games in the industry? Look no further
-          than Fatt Boss! We've got all your favourites, from classic slots and
+          than Fat Boss! We've got all your favourites, from classic slots and
           table games to the latest releases. With top-rated graphics and smooth
           gameplay, you'll feel right in the middle of the action. Plus, with
           new games added all the time, you'll always have options. Try your
@@ -278,14 +285,14 @@
             Enjoy seamless, mobile-friendly gaming on any device.
           </h2>
           <p class="devices-para">
-            At Fatt Boss, we understand that players want the flexibility to
+            At Fat Boss, we understand that players want the flexibility to
             game on the go. As a result, we offer a fully mobile-responsive
             website so that you can play your favourite games from any device,
             anywhere. With easy navigation and intuitive controls, you'll be
             able to jump into the action in no time. Consequently, our mobile
             site is just as secure as our desktop version so you can play
             confidently. Whether you prefer to play on your phone, tablet, or
-            laptop, Fatt Boss has you covered.
+            laptop, Fat Boss has you covered.
           </p>
         </div>
       </section>
@@ -323,7 +330,7 @@
                 />
               </div>
               <p class="review-para">
-                “I’ve been a Fatt Boss player for over a year, and I’ve had
+                “I’ve been a Fat Boss player for over a year, and I’ve had
                 nothing but positive experiences. The games are top-notch, and
                 customer support is always available to help with any issues.
                 Highly recommend!”
@@ -349,7 +356,7 @@
                 />
               </div>
               <p class="review-para">
-                “I’ve been a Fatt Boss player for over a year, and I’ve had
+                “I’ve been a Fat Boss player for over a year, and I’ve had
                 nothing but positive experiences. The games are top-notch, and
                 customer support is always available to help with any issues.
                 Highly recommend!”
@@ -377,7 +384,7 @@
                 />
               </div>
               <p class="review-para">
-                “As a seasoned player, I know a good site when I see one. Fatt
+                “As a seasoned player, I know a good site when I see one. Fat
                 Boss has exceeded all of my expectations – the games are fun and
                 the payouts are quick. A+ all around!”
               </p>
@@ -402,7 +409,7 @@
                 />
               </div>
               <p class="review-para">
-                “As a seasoned player, I know a good site when I see one. Fatt
+                “As a seasoned player, I know a good site when I see one. Fat
                 Boss has exceeded all of my expectations – the games are fun and
                 the payouts are quick. A+ all around!”
               </p>
