--- a/Polish.html
+++ b/Polish.html
@@ -7,6 +7,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <link rel="alternate" href="http://fatbossgambling.pl/" hreflang="en-us" />
+    <link rel="alternate" href="http://fatbossgambling.pl/polish" hreflang="pl-PL" />
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     <link rel="icon" type="image/x-icon" href="./images/icons/favicon.png" />
     <link
